--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -18,6 +18,15 @@ society$a_dvage <- as.numeric(society$a_dvage)
 In this technical report, a single wave of the multi-year panel study ‘Understanding Society’ is analyzed. More specifically, this research project focussed on the use of design and adjustment weights for estimating population quantities from a subset of the ‘Understanding Society’ data: the ‘Innovation Panel’. The data was analyzed using the R package ‘survey’, and base R operations. [Add sentences about results and discussion!].
 *Key terms*: survey package, design weights, adjustment weights, nonresponse.
 
+# Table of Contents
+Introduction
+Methods
+Results
+Discussion
+References
+Appendix I: Research Proposal
+Appendix II: R Script
+
 # Introduction
 
 To estimate population quantities from sample data, broadly two strategies can be employed: model-based inference and design-based inference (Lohr, 2010). In this technical report, the effect of the latter on population estimates is investigated, by means of analyzing a single wave of Great Britain’s  multi-year panel study ‘Understanding Society’. This annual household panel survey is used to assess topics like housing, education, health, and employment among the general population of the United Kingdom. More specifically, we focus on the a subset of first wave, conducted between 2008 and 2009: the ‘Innovation Panel’ (IP). 
